# fortigate-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  start_http.sh  start_stdio.sh
.github/workflows/: ci.yml
certs/: .gitkeep
config/: config.example.json
contrib/: fortigate-mcp.service
src/fortigate_mcp/: __init__.py  auth_middleware.py  server.py  server_http.py
src/fortigate_mcp/config/: __init__.py  loader.py  models.py
src/fortigate_mcp/core/: __init__.py  fortigate.py  logging.py
src/fortigate_mcp/formatting/: __init__.py  formatters.py  templates.py
src/fortigate_mcp/tools/: __init__.py  base.py  cmdb.py  definitions.py  device.py  firewall.py  network.py  resources.py  routing.py  schedules.py  security.py  virtual_ip.py
tests/: __init__.py  conftest.py  test_config.py  test_device_manager.py  test_formatting.py  test_fortigate_api.py  test_tools.py
